--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="physioHelps">
                 <h5>Physiotherapie in Bolanden</h5>
                 <div class="line"></div>
-                <div class="smallText">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
+                <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
                 <div class="physioHelpsCards">
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
