--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                             <div class="footerLogo-textbox-2">Praxis Weber</div>
                         </div>
                         -->
-                        <img src="src/logoReworked.png" height="100%">
+                        <img src="src/LogoReworked.png" height="100%">
                     </div>
                 </div>
             </div>
