--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                 <div class="newLeistungenLeft">
                     <div class="newLeistungenLeftInner">
                         <h5>Anwendungsgebiete</h5>
+                        <div class="line"></div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
