--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             </div>
             <div class="overlayNavigation overlayAnimation">
                 <a class="overlayNavigation-item">Home</a>
-                <a class="overlayNavigation-item">Leistungen</a>
+                <a class="overlayNavigation-item">Anwendungsgebiete</a>
+                <a class="overlayNavigation-item">Netzwerk</a>
                 <a class="overlayNavigation-item">Kontakt</a>
             </div>
             <div class="overlayFooter">
@@ -106,13 +107,12 @@
             </div>
             <div id="header_inner">
                 <div id="header-left">
-                    <img src="src/frederik.JPG">
+                    <img src="src/frederikEditLowQ.jpg">
                 </div>
                 <div id="header-right">
                     <div id="header_headlineWrapper" class="fromBottomWrapper">
                         <h1 class="moveTop">Frederik Weber</h1>
                         <h5 class="moveTop">Physiotherapeut</h5>
-                        <div class="line moveTop"></div>
                         <p class="moveTop">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                     </div>
                 </div>
