--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
                 <div id="header-right">
                     <div id="header_headlineWrapper" class="fromBottomWrapper">
                         <h1 class="moveTop">Frederik Weber</h1>
-                        <h5 class="moveTop">Physiotherapeut</h5>
+                        <div class="subTitle moveTop">
+                            <div class="line"></div>
+                            <h5>Physiotherapeut</h5>
+                        </div>
                         <p class="moveTop">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                     </div>
                 </div>
@@ -125,7 +128,6 @@
         <section id="physioHelpsWrapper" class="opacityReveal">
             <div class="physioHelps">
                 <h5>Physiotherapie in Bolanden</h5>
-                <div class="line"></div>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
                 <div class="physioHelpsCards">
                     <div class="physioHelpsCard">
