--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="overlayNavigation overlayAnimation">
                 <a class="overlayNavigation-item">Home</a>
-                <a class="overlayNavigation-item">Anwendungsgebiete</a>
+                <a class="overlayNavigation-item">Anwendungen</a>
                 <a class="overlayNavigation-item">Netzwerk</a>
                 <a class="overlayNavigation-item">Kontakt</a>
             </div>
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div id="navigationBar_menu">
-                        <div id="navigationBar_menuItem">Anwendungsgebiete</div>
+                        <div id="navigationBar_menuItem">Anwendungen</div>
                         <div id="navigationBar_menuItem">Über mich</div>
                         <div id="navigationBar_menuItem">Netzwerk</div>
                         <div id="navigationBar_menuItem">Kontakt</div>
@@ -125,7 +125,10 @@
 
     <div id="content">
 
-        <section id="physioHelpsWrapper" class="opacityReveal">
+        <div id="physioHelpsWrapper" class="opacityReveal">
+            <div class="sectionImagePadding">
+                <div class="sectionImage"></div>
+            </div>
             <div class="physioHelps">
                 <h5>Physiotherapie in Bolanden</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
@@ -144,12 +147,12 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <section id="newLeistungenWrapper" class="opacityReveal">
             <div class="newLeistungen">
                 <div class="newLeistungenLeft">
                     <div class="newLeistungenLeftInner">
-                        <h5>Anwendungsgebiete</h5>
+                        <h5>Anwendungen</h5>
                         <div class="line"></div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
                     </div>
@@ -328,6 +331,10 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section id="contact">
+
         </section>
 
         <!-- <section id="testSection2">
