--- a/index.html
+++ b/index.html
@@ -333,8 +333,14 @@
             </div>
         </section>
 
-        <section id="contact">
+        <section id="contactWrapper">
+            <div id="contact">
+                <div class="contactHeadline">
+                    <h5>Kontakt</h5>
+                </div>
 
+                <p>Hello this is content</p>
+            </div>
         </section>
 
         <!-- <section id="testSection2">
