--- a/index.html
+++ b/index.html
@@ -132,17 +132,17 @@
             <div class="physioHelps">
                 <h5>Physiotherapie in Bolanden</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
-                <div class="physioHelpsCards">
+                <div class="physioHelpsCards fromBottomWrapper">
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
                         <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     </div>
                     <div class="physioHelpsCard">
-                        <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
-                        <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
+                        <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
+                        <div class="physioHelpsCardText">Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</div>
                     </div>
                     <div class="physioHelpsCard">
-                        <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
+                        <div class="physioHelpsCardHeadline">Rehabilitation nach Verletzungen </div>
                         <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     </div>
                 </div>
