--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <img src="src/frederikEditLowQ.jpg">
                 </div>
                 <div id="header-right">
-                    <div id="header_headlineWrapper">
+                    <div id="header_headlineWrapper" class="fromBottomWrapper">
                         <h1 class="moveTop">Frederik Weber</h1>
                         <div class="subTitle moveTop">
                             <div class="line"></div>
@@ -131,11 +131,11 @@
                 <h5>Physiotherapie in Bolanden</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
                 <div class="physioHelpsCards fromBottomWrapper">
-                    <div class="physioHelpsCard moveTop">
+                    <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
                         <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     </div>
-                    <div class="physioHelpsCard moveTop">
+                    <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
                         <div class="physioHelpsCardText">Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</div>
                     </div>
