--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                         <div id="navigationBar_menuItem">Netzwerk</div>
                         <div id="navigationBar_menuItem">Kontakt</div>
                     </div>
-                    <button class="hamburgerMenu">
+                    <div class="hamburgerMenu">
                         <div class="hamburgerMenuLine"></div>
                         <div class="hamburgerMenuLine"></div>
                         <div class="hamburgerMenuLine"></div>
-                    </button>
+                    </div>
                 </div>
                 <!-- <div class="navigationBarBelow">
                     <div class="navigationBarBelow_inner">
@@ -133,14 +133,17 @@
                 <div class="physioHelpsCards fromBottomWrapper">
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
+                        <div class="line"></div>
                         <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     </div>
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
+                        <div class="line"></div>
                         <div class="physioHelpsCardText">Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</div>
                     </div>
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Rehabilitation nach Verletzungen </div>
+                        <div class="line"></div>
                         <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     </div>
                 </div>
@@ -163,7 +166,7 @@
                         </div>
                         <div class="newLeistungen-card">
                             <img src="src/training.jpg">
-                            <div class="newLeistungen-cardText">Effektives Coaching</div>
+                            <div class="newLeistungen-cardText">Effektives<br>Coaching</div>
                         </div>
 
                         <div class="newLeistungen-card">
@@ -172,7 +175,7 @@
                         </div>
                         <div class="newLeistungen-card">
                             <img src="src/IMG_3908.JPG">
-                            <div class="newLeistungen-cardText">Effektives Coaching</div>
+                            <div class="newLeistungen-cardText">Effektives<br>Coaching</div>
                         </div>
                     </div>
                 </div>
