--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                             <h5>Physiotherapeut</h5>
                         </div>
                         <p class="moveTop">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                        <button class="moreButton moveTop">Mehr erfahren</button>
                     </div>
                 </div>
             </div>
