--- a/index.html
+++ b/index.html
@@ -125,24 +125,25 @@
     <div id="content">
 
         <div id="physioHelpsWrapper" class="opacityReveal">
+            <div class="BGimage"></div>
             <div class="sectionImagePadding">
                 <div class="sectionImage"></div>
             </div>
             <div class="physioHelps">
                 <h5>Physiotherapie in Bolanden</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
-                <div class="physioHelpsCards fromBottomWrapper">
-                    <div class="physioHelpsCard">
+                <div class="physioHelpsCards">
+                    <div class="physioHelpsCard fromBottomWrapper">
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
                         <div class="line"></div>
                         <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     </div>
-                    <div class="physioHelpsCard">
+                    <div class="physioHelpsCard fromBottomWrapper">
                         <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
                         <div class="line"></div>
                         <div class="physioHelpsCardText">Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</div>
                     </div>
-                    <div class="physioHelpsCard">
+                    <div class="physioHelpsCard fromBottomWrapper">
                         <div class="physioHelpsCardHeadline">Rehabilitation nach Verletzungen </div>
                         <div class="line"></div>
                         <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
@@ -153,7 +154,7 @@
         <section id="newLeistungenWrapper" class="opacityReveal">
             <div class="newLeistungen">
                 <div class="newLeistungenLeft">
-                    <div class="newLeistungenLeftInner">
+                    <div class="newLeistungenLeftInner fromBottomWrapper">
                         <h5>Anwendungen</h5>
                         <div class="line"></div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
@@ -161,20 +162,20 @@
                 </div>
                 <div class="newLeistungenRight">
                     <div class="leistungenRightGrid">
-                        <div class="newLeistungen-card">
+                        <div class="newLeistungen-card opacityReveal fromBottomWrapper">
                             <img src="src/frederik.JPG">
                             <div class="newLeistungen-cardText">Vielseitige Therapieverfahren</div>
                         </div>
-                        <div class="newLeistungen-card">
+                        <div class="newLeistungen-card opacityReveal fromBottomWrapper">
                             <img src="src/training.jpg">
                             <div class="newLeistungen-cardText">Effektives<br>Coaching</div>
                         </div>
 
-                        <div class="newLeistungen-card">
+                        <div class="newLeistungen-card opacityReveal fromBottomWrapper">
                             <img src="src/anatomie.JPG">
                             <div class="newLeistungen-cardText">Professionnelle Fitnessberatung</div>
                         </div>
-                        <div class="newLeistungen-card">
+                        <div class="newLeistungen-card opacityReveal fromBottomWrapper">
                             <img src="src/IMG_3908.JPG">
                             <div class="newLeistungen-cardText">Effektives<br>Coaching</div>
                         </div>
