--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/8fc67f8040.js" crossorigin="anonymous"></script>
 
 
@@ -55,8 +63,9 @@
             </div>
         </div>
     </div>
-    <div id="header-emptyTop"></div>
+
     <div id="headerWrapper">
+        <div id="header-emptyTop"></div>
         <!--<div class="headerPictureCollection">
             <div class="headerPicture"></div>
             <div class="headerPicture"></div>
@@ -106,6 +115,8 @@
             <div id="header_inner">
                 <div id="header-left">
                     <img src="src/frederikEditLowQ.jpg">
+                    <div class="header-leftBG"></div>
+                    <div class="header-leftBG2"></div>
                 </div>
                 <div id="header-right">
                     <div id="header_headlineWrapper" class="fromBottomWrapper">
@@ -115,7 +126,10 @@
                             <h5>Physiotherapeut</h5>
                         </div>
                         <p class="moveTop">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                        <button class="moreButton moveTop">Mehr erfahren</button>
+                        <button class="moreButton moveTop">
+                            mehr erfahren
+                            <div class="icon"><i class="fa-solid fa-arrow-right"></i></div>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -123,7 +137,6 @@
     </div>
 
     <div id="content">
-
         <div id="physioHelpsWrapper" class="opacityReveal">
             <div class="BGimage"></div>
             <div class="sectionImagePadding">
@@ -132,18 +145,18 @@
             <div class="physioHelps">
                 <h5>Physiotherapie in Bolanden</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
-                <div class="physioHelpsCards">
-                    <div class="physioHelpsCard fromBottomWrapper">
+                <div class="physioHelpsCards fromBottomWrapper">
+                    <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
                         <div class="line"></div>
                         <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     </div>
-                    <div class="physioHelpsCard fromBottomWrapper">
+                    <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
                         <div class="line"></div>
                         <div class="physioHelpsCardText">Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</div>
                     </div>
-                    <div class="physioHelpsCard fromBottomWrapper">
+                    <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Rehabilitation nach Verletzungen </div>
                         <div class="line"></div>
                         <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
