--- a/index.html
+++ b/index.html
@@ -352,10 +352,11 @@
         <section id="contactWrapper">
             <div id="contact">
                 <div class="contactHeadline">
-                    <h5>Kontakt</h5>
                 </div>
-
-                <p>Hello this is content</p>
+                <div class="contactRight">
+                    <div class="contactRightBG"></div>
+                    <h5>Kontaktieren Sie mich</h5>
+                </div>
             </div>
         </section>
 
