--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
                     <div class="header-leftBG"></div>
                     <div class="header-leftBG2"></div>
                 </div>
-                <div id="header-right">
-                    <div id="header_headlineWrapper" class="fromBottomWrapper">
-                        <h1 class="moveTop">Frederik Weber</h1>
-                        <div class="subTitle moveTop">
+                <div id="header-right" class="opacityReveal">
+                    <div id="header_headlineWrapper">
+                        <h1>Frederik Weber</h1>
+                        <div class="subTitle">
                             <div class="line"></div>
                             <h5>Physiotherapeut</h5>
                         </div>
-                        <p class="moveTop">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                        <button class="moreButton moveTop">
-                            mehr erfahren
-                            <div class="icon"><i class="fa-solid fa-arrow-right"></i></div>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                        <button class="moreButton fromBottomWrapper">
+                            <p class="moveTop">mehr erfahren</p>
+                            <div class="icon moveRight"><i class="fa-solid fa-arrow-right"></i></div>
                         </button>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
         <section id="newLeistungenWrapper" class="opacityReveal">
             <div class="newLeistungen">
                 <div class="newLeistungenLeft">
-                    <div class="newLeistungenLeftInner fromBottomWrapper">
+                    <div class="newLeistungenLeftInner">
                         <h5>Anwendungen</h5>
                         <div class="line"></div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
@@ -175,20 +175,20 @@
                 </div>
                 <div class="newLeistungenRight">
                     <div class="leistungenRightGrid">
-                        <div class="newLeistungen-card opacityReveal fromBottomWrapper">
+                        <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederik.JPG">
                             <div class="newLeistungen-cardText">Vielseitige Therapieverfahren</div>
                         </div>
-                        <div class="newLeistungen-card opacityReveal fromBottomWrapper">
+                        <div class="newLeistungen-card opacityReveal">
                             <img src="src/training.jpg">
                             <div class="newLeistungen-cardText">Effektives<br>Coaching</div>
                         </div>
 
-                        <div class="newLeistungen-card opacityReveal fromBottomWrapper">
+                        <div class="newLeistungen-card opacityReveal">
                             <img src="src/anatomie.JPG">
                             <div class="newLeistungen-cardText">Professionnelle Fitnessberatung</div>
                         </div>
-                        <div class="newLeistungen-card opacityReveal fromBottomWrapper">
+                        <div class="newLeistungen-card opacityReveal">
                             <img src="src/IMG_3908.JPG">
                             <div class="newLeistungen-cardText">Effektives<br>Coaching</div>
                         </div>
