--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             <h5>Physiotherapeut</h5>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                        <button class="moreButton fromBottomWrapper">
+                        <button class="moreButton opacityReveal fromBottomWrapper">
                             <p class="moveTop">mehr erfahren</p>
                             <div class="icon moveRight"><i class="fa-solid fa-arrow-right"></i></div>
                         </button>
