--- a/index.html
+++ b/index.html
@@ -118,18 +118,38 @@
                     <div class="header-leftBG"></div>
                     <div class="header-leftBG2"></div>
                 </div>
-                <div id="header-right" class="opacityReveal">
+                <div id="header-right">
                     <div id="header_headlineWrapper">
                         <h1>Frederik Weber</h1>
                         <div class="subTitle">
                             <div class="line"></div>
-                            <h5>Physiotherapeut</h5>
+                            <p>Physiotherapeut</p>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                        <button class="moreButton opacityReveal fromBottomWrapper">
+                        <button class="moreButton fromBottomWrapper">
                             <p class="moveTop">mehr erfahren</p>
                             <div class="icon moveRight"><i class="fa-solid fa-arrow-right"></i></div>
                         </button>
+
+
+                        <div class="headerItemWrapper">
+                            <div class="headerItem">
+                                <div class="headerItem-left"><i class="fa-solid fa-location-dot"></i></div>
+                                <div class="headerItem-right">
+                                    <h5>Adresse</h5>
+                                    <p>Crayenbühlstraße 1a</p>
+                                    <p>67295 Bolanden-Weierhof</p>
+                                </div>
+                            </div>
+                            <div class="headerItem">
+                                <div class="headerItem-left"><i class="fa-solid fa-location-dot"></i></div>
+                                <div class="headerItem-right">
+                                    <h5>Adresse</h5>
+                                    <p>Crayenbühlstraße 1a</p>
+                                    <p>67295 Bolanden-Weierhof</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -142,30 +162,30 @@
             <div class="sectionImagePadding">
                 <div class="sectionImage"></div>
             </div>
-            <div class="physioHelps">
+            <div class="physioHelps sectionWrapper">
                 <h5>Physiotherapie in Bolanden</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
                 <div class="physioHelpsCards fromBottomWrapper">
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
-                        <div class="line"></div>
+                        <!--<div class="line"></div>-->
                         <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     </div>
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
-                        <div class="line"></div>
+                        <!--<div class="line"></div>-->
                         <div class="physioHelpsCardText">Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</div>
                     </div>
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Rehabilitation nach Verletzungen </div>
-                        <div class="line"></div>
+                        <!--<div class="line"></div>-->
                         <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
                     </div>
                 </div>
             </div>
         </div>
-        <section id="newLeistungenWrapper" class="opacityReveal">
-            <div class="newLeistungen">
+        <section id="newLeistungenWrapper">
+            <div class="newLeistungen sectionWrapper">
                 <div class="newLeistungenLeft">
                     <div class="newLeistungenLeftInner">
                         <h5>Anwendungen</h5>
