--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                             <p>Physiotherapeut</p>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                        <button class="moreButton fromBottomWrapper">
-                            <p class="moveTop">mehr erfahren</p>
-                            <div class="icon moveRight"><i class="fa-solid fa-arrow-right"></i></div>
+                        <button class="moreButton">
+                            <p class="testi">mehr erfahren</p>
+                            <div class="icon"><i class="fa-solid fa-arrow-right"></i></div>
                         </button>
 
 
@@ -158,7 +158,6 @@
 
     <div id="content">
         <div id="physioHelpsWrapper" class="opacityReveal">
-            <div class="BGimage"></div>
             <div class="sectionImagePadding">
                 <div class="sectionImage"></div>
             </div>
