--- a/index.html
+++ b/index.html
@@ -168,17 +168,17 @@
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
                         <!--<div class="line"></div>-->
-                        <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
+                        <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
                     </div>
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
                         <!--<div class="line"></div>-->
-                        <div class="physioHelpsCardText">Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</div>
+                        <p>Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</p>
                     </div>
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Rehabilitation nach Verletzungen </div>
                         <!--<div class="line"></div>-->
-                        <div class="physioHelpsCardText">Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</div>
+                        <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
                     </div>
                 </div>
             </div>
@@ -188,8 +188,7 @@
                 <div class="newLeistungenLeft">
                     <div class="newLeistungenLeftInner">
                         <h5>Anwendungen</h5>
-                        <div class="line"></div>
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                     </div>
                 </div>
                 <div class="newLeistungenRight">
