--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="physioHelps sectionWrapper">
                 <h5>Physiotherapie in Bolanden</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
-                <div class="physioHelpsCards fromBottomWrapper">
+                <div class="physioHelpsCards">
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
                         <!--<div class="line"></div>-->
@@ -194,20 +194,20 @@
                 <div class="newLeistungenRight">
                     <div class="leistungenRightGrid">
                         <div class="newLeistungen-card opacityReveal">
-                            <img src="src/frederik.JPG">
+                            <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">Vielseitige Therapieverfahren</div>
                         </div>
                         <div class="newLeistungen-card opacityReveal">
-                            <img src="src/training.jpg">
+                            <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">Effektives<br>Coaching</div>
                         </div>
 
                         <div class="newLeistungen-card opacityReveal">
-                            <img src="src/anatomie.JPG">
+                            <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">Professionnelle Fitnessberatung</div>
                         </div>
                         <div class="newLeistungen-card opacityReveal">
-                            <img src="src/IMG_3908.JPG">
+                            <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">Effektives<br>Coaching</div>
                         </div>
                     </div>
