--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="physioHelps sectionWrapper">
                 <h5>Physiotherapie in Bolanden</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
-                <div class="physioHelpsCards">
+                <div class="physioHelpsCards fromBottomWrapper">
                     <div class="physioHelpsCard">
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
                         <!--<div class="line"></div>-->
@@ -195,20 +195,28 @@
                     <div class="leistungenRightGrid">
                         <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
-                            <div class="newLeistungen-cardText">Vielseitige Therapieverfahren</div>
+                            <div class="newLeistungen-cardText">
+                                <div class="newLeistungen-cardTextHeadline">Vielseitige Therapieverfahren</div>
+                            </div>
                         </div>
                         <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
-                            <div class="newLeistungen-cardText">Effektives<br>Coaching</div>
+                            <div class="newLeistungen-cardText">
+                                <div class="newLeistungen-cardTextHeadline">Effektives Coaching</div>
+                            </div>
                         </div>
 
                         <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
-                            <div class="newLeistungen-cardText">Professionnelle Fitnessberatung</div>
+                            <div class="newLeistungen-cardText">
+                                <div class="newLeistungen-cardTextHeadline">Professionnelle Fitnessberatung</div>
+                            </div>
                         </div>
                         <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
-                            <div class="newLeistungen-cardText">Effektives<br>Coaching</div>
+                            <div class="newLeistungen-cardText">
+                                <div class="newLeistungen-cardTextHeadline">Effektives Coaching</div>
+                            </div>
                         </div>
                     </div>
                 </div>
