--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </div>
 
     <div id="headerWrapper">
+
         <div id="header-emptyTop"></div>
         <!--<div class="headerPictureCollection">
             <div class="headerPicture"></div>
@@ -73,6 +74,7 @@
         </div> -->
         <!--<div id="header-leftSide"></div>-->
         <div id="header">
+
             <div class="navigationBar">
                 <div class="navigationBar_inner">
                     <div id="navigationBar_logo">
@@ -113,6 +115,7 @@
                 </div>-->
             </div>
             <div id="header_inner">
+                <div class="sticker"></div>
                 <div id="header-left">
                     <img src="src/frederikEditLowQ.jpg">
                     <div class="header-leftBG"></div>
@@ -122,7 +125,7 @@
                     <div id="header_headlineWrapper">
                         <h1>Frederik Weber</h1>
                         <div class="subTitle">
-                            <div class="line"></div>
+                            <!--<div class="line"></div> -->
                             <p>Physiotherapeut</p>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
@@ -164,18 +167,18 @@
             <div class="physioHelps sectionWrapper">
                 <h5>Physiotherapie in Bolanden</h5>
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
-                <div class="physioHelpsCards fromBottomWrapper">
-                    <div class="physioHelpsCard">
+                <div class="physioHelpsCards">
+                    <div class="physioHelpsCard cardOne moveRight">
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
                         <!--<div class="line"></div>-->
                         <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
                     </div>
-                    <div class="physioHelpsCard">
+                    <div class="physioHelpsCard moveRight">
                         <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
                         <!--<div class="line"></div>-->
                         <p>Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</p>
                     </div>
-                    <div class="physioHelpsCard">
+                    <div class="physioHelpsCard cardThree moveRight">
                         <div class="physioHelpsCardHeadline">Rehabilitation nach Verletzungen </div>
                         <!--<div class="line"></div>-->
                         <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
@@ -187,8 +190,10 @@
             <div class="newLeistungen sectionWrapper">
                 <div class="newLeistungenLeft">
                     <div class="newLeistungenLeftInner">
+                        <h2>Unsere</h2>
                         <h5>Anwendungen</h5>
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                     </div>
                 </div>
                 <div class="newLeistungenRight">
@@ -196,13 +201,13 @@
                         <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">Vielseitige Therapieverfahren</div>
+                                <div class="newLeistungen-cardTextHeadline">Vielseitige<br> Therapieverfahren</div>
                             </div>
                         </div>
                         <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">Effektives Coaching</div>
+                                <div class="newLeistungen-cardTextHeadline">Effektives<br> Coaching</div>
                             </div>
                         </div>
 
@@ -215,7 +220,7 @@
                         <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">Effektives Coaching</div>
+                                <div class="newLeistungen-cardTextHeadline">Effektives <br>Coaching</div>
                             </div>
                         </div>
                     </div>
