--- a/index.html
+++ b/index.html
@@ -67,12 +67,6 @@
     <div id="headerWrapper">
 
         <div id="header-emptyTop"></div>
-        <!--<div class="headerPictureCollection">
-            <div class="headerPicture"></div>
-            <div class="headerPicture"></div>
-            <div class="headerPicture"></div>
-        </div> -->
-        <!--<div id="header-leftSide"></div>-->
         <div id="header">
 
             <div class="navigationBar">
@@ -98,21 +92,6 @@
                         <div class="hamburgerMenuLine"></div>
                     </div>
                 </div>
-                <!-- <div class="navigationBarBelow">
-                    <div class="navigationBarBelow_inner">
-                        <div id="navigationBar_menu">
-                            <div id="navigationBar_menuItem" class="used">HOME</div>
-                            <div id="navigationBar_menuItem">ÜBER MICH</div>
-                            <div id="navigationBar_menuItem">LEISTUNGEN</div>
-                            <div id="navigationBar_menuItem">KONTAKT</div>
-                        </div>
-                        <div class="navigationBarBelow_social">
-                            <i class="fa-brands fa-instagram"></i>
-                            <i class="fa-brands fa-square-facebook"></i>
-                            <i class="fa-brands fa-whatsapp"></i>
-                        </div>
-                    </div>
-                </div>-->
             </div>
             <div id="header_inner">
                 <div id="header-left">
@@ -124,7 +103,6 @@
                     <div id="header_headlineWrapper">
                         <h1>Frederik Weber</h1>
                         <div class="subTitle">
-                            <!--<div class="line"></div> -->
                             <p>Physiotherapeut</p>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
@@ -168,18 +146,27 @@
                 <p>Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</p>
                 <div class="physioHelpsCards">
                     <div class="physioHelpsCard cardOne moveRight">
+                        <div class="physioHelpsCardIcon">
+                            <img src="src/run.svg" height="100%">
+                            <div class="physioHelpsCardIconBG"></div>
+                        </div>
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
-                        <!--<div class="line"></div>-->
                         <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
                     </div>
                     <div class="physioHelpsCard moveRight">
+                        <div class="physioHelpsCardIcon">
+                            <img src="src/run.svg" height="100%">
+                            <div class="physioHelpsCardIconBG"></div>
+                        </div>
                         <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
-                        <!--<div class="line"></div>-->
                         <p>Nach Verletzungen oder Operationen hilft Physiotherapie Patienten, ihre Beweglichkeit und Flexibilität wiederzuerlangen.</p>
                     </div>
                     <div class="physioHelpsCard cardThree moveRight">
+                        <div class="physioHelpsCardIcon">
+                            <img src="src/run.svg" height="100%">
+                            <div class="physioHelpsCardIconBG"></div>
+                        </div>
                         <div class="physioHelpsCardHeadline">Rehabilitation nach Verletzungen </div>
-                        <!--<div class="line"></div>-->
                         <p>Physiotherapie kann chronische und akute Schmerzen reduzieren, indem gezielte Übungen und Techniken angewendet werden.</p>
                     </div>
                 </div>
@@ -191,8 +178,10 @@
                     <div class="newLeistungenLeftInner">
                         <h2>Unsere</h2>
                         <h5>Anwendungen</h5>
+                        <div class="line"></div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                        <button class="justAButton">mehr erfahren</button>
                     </div>
                 </div>
                 <div class="newLeistungenRight">
@@ -200,10 +189,15 @@
                         <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">Vielseitige<br> Therapieverfahren</div>
+                                <div class="newLeistungen-cardTextHeadline">
+                                    <div class="iconi"><img src="src/run.svg"></div>
+                                    <h3><i>Vielseitige<br>
+                                            Therapieverfahren</i></h3>
+                                </div>
+                                <p>Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</p>
                             </div>
                         </div>
-                        <div class="newLeistungen-card opacityReveal">
+                        <div class=" newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">
                                 <div class="newLeistungen-cardTextHeadline">Effektives<br> Coaching</div>
@@ -213,7 +207,7 @@
                         <div class="newLeistungen-card opacityReveal">
                             <img src="src/frederikEditLowQ.jpg">
                             <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">Professionnelle Fitnessberatung</div>
+                                <div class="newLeistungen-cardTextHeadline">Professionnelle<br>Fitnessberatung</div>
                             </div>
                         </div>
                         <div class="newLeistungen-card opacityReveal">
@@ -226,63 +220,6 @@
                 </div>
             </div>
         </section>
-
-
-        <!-- <section id="secondSection">
-            <div class="secondSection-overlay moveDownRevealOverlay">
-            </div>
-            <div class="secondSection_inner">
-                <div class="aboutMeWrapper">
-                    <div class="aboutMeTextBox">
-                        <h4>Über mich</h4>
-                        <h5>Heilpraktiker für<br>Physiotherapie</h5>
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
-                        <button type="button" class="cta-button">MEHR ERFAHREN</button>
-                    </div>
-                    <div class="aboutMeImageBoxWrapper fromBottomWrapper">
-                        <div class="aboutMeImageBox">
-                            <div class="aboutMeImageBox-first imi"></div>
-                            <div class="aboutMeImageBox-second imi"></div>
-                        </div>
-                        <div class="aboutMeImageBox">
-                            <div class="aboutMeImageBox-third imi"></div>
-                            <div class="aboutMeImageBox-fourth imi"></div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>-->
-
-
-        <!-- <section id="leistungenWrapper">
-            <div class="leistungen">
-                <h5>Unsere Leistungen</h5>
-                <div class="smallText">Physiotherapie spielt eine entscheidende Rolle in der modernen Medizin und bietet zahlreiche Vorteile für Patienten mit verschiedenen Gesundheitsproblemen.</div>
-            </div>
-
-            <div class="leistungenCards">
-                <div class="leistungenCard">
-                    <i class="fa-solid fa-staff-snake"></i>
-                    <h2>Vielseitige Therapieverfahren</h2>
-                    <div class="smallText">Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</div>
-                </div>
-                <div class="leistungenCard leistungenCardC">
-                    <i class="fa-solid fa-handshake-angle"></i>
-                    <h2>Effektives Coaching</h2>
-                    <div class="smallText">im Bereich Schmerzpsychologie und Wahrnehmung</div>
-                </div>
-                <div class="leistungenCard">
-                    <i class="fa-solid fa-dumbbell"></i>
-                    <h2>Professionnelle Fitnessberatung</h2>
-                    <div class="smallText">• Erstellung von Fitnessplänen<br>
-                        • gemeinsames Training<br>
-                        • Personal Training</div>
-                </div>
-            </div>
-        </section> -->
-
-
 
         <section id="firstSection">
             <div class="firstSection-overlay"></div>
@@ -383,61 +320,12 @@
             <div id="contact">
                 <div class="contactHeadline">
                 </div>
+                <div class="contactRightBG"></div>
                 <div class="contactRight">
-                    <div class="contactRightBG"></div>
                     <h5>Kontaktieren Sie mich</h5>
                 </div>
             </div>
         </section>
-
-        <!-- <section id="testSection2">
-            <div class="testSection2-left">
-                <h1>Unsere Leistungen</h1>
-            </div>
-            <div class="testSection2-right">
-                <div class="testSection_inner">
-                    <div class="testSection_sub">
-                        <div class="testSection_subPicSection">
-                            <div class="testSection_subPic">
-                                <i class="fa-solid fa-staff-snake"></i>
-                            </div>
-                            <div class="blueStuff"></div>
-                        </div>
-                        <div class="testSection_subText">
-                            <h2>Vielseitige<br>Therapieverfahren</h2>
-                            <div class="description">Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</div>
-                        </div>
-                    </div>
-                    <div class="testSection_sub">
-                        <div class="testSection_subPicSection">
-                            <div class="testSection_subPic">
-                                <i class="fa-solid fa-handshake-angle"></i>
-                            </div>
-                            <div class="blueStuff"></div>
-                        </div>
-                        <div class="testSection_subText">
-                            <h2>Effektives Coaching</h2>
-                            <div class="description">im Bereich Schmerzpsychologie und Wahrnehmung</div>
-                        </div>
-                    </div>
-                    <div class="testSection_sub">
-                        <div class="testSection_subPicSection">
-                            <div class="testSection_subPic">
-                                <i class="fa-solid fa-dumbbell"></i>
-                            </div>
-                            <div class="blueStuff"></div>
-                        </div>
-                        <div class="testSection_subText">
-                            <h2>Professionnelle Fitnessberatung</h2>
-                            <div class="description">• Erstellung von Fitnessplänen<br>
-                                • gemeinsames Training<br>
-                                • Personal Training</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
         <section id="footer">
             <div class="footerAbsoluteBG"></div>
             <div class="footer_inner">
